--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "express-fileupload": "^0.4.0",
     "express-handlebars": "^3.0.0",
     "fs": "0.0.1-security",
+    "mysql2": "^1.6.1",
     "path": "^0.12.7",
     "request": "^2.88.0",
+    "sequelize": "^4.38.0",
     "url": "^0.11.0"
   }
 }
