--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "crypto": "^1.0.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
     "express-handlebars": "^3.0.0",
     "fs": "0.0.1-security",
     "mysql2": "^1.6.1",
+    "nodemailer": "^4.6.8",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "sequelize": "^4.38.0",
