--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omegaproject",
   "version": "1.0.0",
-  "description": "",
+  "description": "Bandwagon",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,11 +25,13 @@
     "express-fileupload": "^0.4.0",
     "express-handlebars": "^3.0.0",
     "fs": "0.0.1-security",
+    "lodash": "^4.17.11",
     "mysql2": "^1.6.1",
     "nodemailer": "^4.6.8",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "sequelize": "^4.38.1",
     "url": "^0.11.0"
-  }
+  },
+  "devDependencies": {}
 }
